# yaclips

./: .pre-commit-config.yaml  README.md  RELEASE.md  generate_proto.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-build.yml  docker-image.yml  docker-publish.yml  gen-proto.yml  lint.yml  python-package.yml  python-publish.yml
client/: pyproject.toml
client/tests/: test_yaclips_client.py
client/yaclips_client/: __init__.py
client/yaclips_client/proto/: yaclips_pb2.py  yaclips_pb2.pyi  yaclips_pb2_grpc.py
docs/source/: conf.py  index.rst  usage.rst
proto/: yaclips.proto
tests/: test_yaclips.py
yaclips/: __init__.py
yaclips/proto/: yaclips_pb2.py  yaclips_pb2.pyi  yaclips_pb2_grpc.py
