[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project]
name = "yaclips_client"
description = "yaclips_client"
keywords = ["yaclips_client"]
requires-python = ">=3.8"
dependencies = [
]
dynamic = ["version", ]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.optional-dependencies]
test = [
    "pytest",
]

[[project.authors]]
name = "wh1isper"
email = "9573586@qq.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Source = "https://github.com/wh1isper/yaclips"

[tool.check-manifest]
ignore = [".*", ]

[tool.hatch.version]
path = "yaclips_client/__init__.py"
